# solidity

./: .travis.yml  CMakeLists.txt  CODING_STYLE.md  Changelog.md  README.md  ReleaseChecklist.md  appveyor.yml
.circleci/: config.yml
test/: CMakeLists.txt  ExecutionFramework.cpp  ExecutionFramework.h  Metadata.cpp  Options.cpp  Options.h  RPCSession.cpp  boostTest.cpp  solcjsTests.sh
test/compilationTests/corion/: ico.sol  module.sol  moduleHandler.sol  token.sol
test/compilationTests/milestonetracker/: README.md
test/compilationTests/zeppelin/: LimitBalance.sol
test/compilationTests/zeppelin/crowdsale/: Crowdsale.sol
test/compilationTests/zeppelin/lifecycle/: TokenDestructible.sol
test/compilationTests/zeppelin/ownership/: HasNoTokens.sol  HasNoVapor.sol
test/contracts/: AuctionRegistrar.cpp  FixedFeeRegistrar.cpp  LLL_ENS.cpp  LLL_ERC20.cpp  LLL_VNS.cpp  LLL_VRC20.cpp  Wallet.cpp
test/libjulia/: Common.cpp  Inliner.cpp  Parser.cpp
test/liblll/: Compiler.cpp  EndToEndTest.cpp  ExecutionFramework.h
test/libsolidity/: ABIDecoderTests.cpp  ASTJSON.cpp  ASTLegacyJSON.cpp  AnalysisFramework.cpp  Assembly.cpp  GasMeter.cpp  Imports.cpp  InlineAssembly.cpp  Metadata.cpp  SolidityABIJSON.cpp  SolidityEndToEndTest.cpp  SolidityExecutionFramework.h  SolidityExpressionCompiler.cpp  SolidityNameAndTypeResolution.cpp  SolidityNatspecJSON.cpp  SolidityOptimizer.cpp  SolidityParser.cpp  StandardCompiler.cpp  SyntaxTest.cpp  ViewPureChecker.cpp
test/libvvmasm/: Optimiser.cpp  SourceLocation.cpp
test/libyul/: Common.cpp
test/tools/: CMakeLists.txt  fuzzer.cpp
(+133 files in other folders)
